# konamask

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini  imgui.ini  install_dependencies.bat  install_dependencies.sh  konamask.pc
output/: config.ini  main
src/: Interface.cpp  Interface.h  Logger.h  OpenFileManager.hpp  Settings.cpp  Settings.h  SimpleIni.h  SpeechToText.cpp  SpeechToText.d  SpeechToText.h  TextToSpeech.cpp  TextToSpeech.d  TextToSpeech.h  Tray.cpp  Tray.h  curl.cpp  curl.h  font.c  icons.c  imgui_impl_sdl2.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  main.cpp  main.d  tray.h
src/imgui/backends/: imgui_impl_sdl2.h  imgui_impl_vulkan.h
